--- a/single_cell.ipynb
+++ b/single_cell.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +348,407 @@
    "outputs": [],
    "source": [
     "assert 0==sum(df.columns!=cells.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sample</th>\n",
+       "      <th>Batch</th>\n",
+       "      <th>Cluster_id</th>\n",
+       "      <th>Ages</th>\n",
+       "      <th>Development_stage</th>\n",
+       "      <th>Method</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Biomaterial</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>ident</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Celltype</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AT1 cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AT2 cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Activated T cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Astrocyte(Bergmann glia)</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B cell (Plasmocyte)_IGHM/HG high</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Endothelial cell_TMEM100 high</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Excitatory neuron</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fibroblast</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fibroblast_A2M high</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M2 Macrophage</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Macrophage</th>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Macrophage_M2</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Myeloid cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Neutrophil_CD177 high</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oligodendrocyte</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oligodendrocyte progenitor cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sinusoidal endothelial cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Smooth muscle cell</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ventricle cardiomyocyte</th>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  Sample  Batch  Cluster_id  Ages  \\\n",
+       "Celltype                                                            \n",
+       "AT1 cell                             100    100         100   100   \n",
+       "AT2 cell                             100    100         100   100   \n",
+       "Activated T cell                     100    100         100   100   \n",
+       "Astrocyte(Bergmann glia)             100    100         100   100   \n",
+       "B cell (Plasmocyte)_IGHM/HG high     100    100         100   100   \n",
+       "Endothelial cell_TMEM100 high        100    100         100   100   \n",
+       "Excitatory neuron                    100    100         100   100   \n",
+       "Fibroblast                           100    100         100   100   \n",
+       "Fibroblast_A2M high                  100    100         100   100   \n",
+       "M2 Macrophage                        100    100         100   100   \n",
+       "Macrophage                           200    200         200   200   \n",
+       "Macrophage_M2                        100    100         100   100   \n",
+       "Myeloid cell                         100    100         100   100   \n",
+       "Neutrophil_CD177 high                100    100         100   100   \n",
+       "Oligodendrocyte                      100    100         100   100   \n",
+       "Oligodendrocyte progenitor cell      100    100         100   100   \n",
+       "Sinusoidal endothelial cell          100    100         100   100   \n",
+       "Smooth muscle cell                   100    100         100   100   \n",
+       "Ventricle cardiomyocyte              100    100         100   100   \n",
+       "\n",
+       "                                  Development_stage  Method  Gender  Source  \\\n",
+       "Celltype                                                                      \n",
+       "AT1 cell                                        100     100     100     100   \n",
+       "AT2 cell                                        100     100     100     100   \n",
+       "Activated T cell                                100     100     100     100   \n",
+       "Astrocyte(Bergmann glia)                        100     100     100     100   \n",
+       "B cell (Plasmocyte)_IGHM/HG high                100     100     100     100   \n",
+       "Endothelial cell_TMEM100 high                   100     100     100     100   \n",
+       "Excitatory neuron                               100     100     100     100   \n",
+       "Fibroblast                                      100     100     100     100   \n",
+       "Fibroblast_A2M high                             100     100     100     100   \n",
+       "M2 Macrophage                                   100     100     100     100   \n",
+       "Macrophage                                      200     200     200     200   \n",
+       "Macrophage_M2                                   100     100     100     100   \n",
+       "Myeloid cell                                    100     100     100     100   \n",
+       "Neutrophil_CD177 high                           100     100     100     100   \n",
+       "Oligodendrocyte                                 100     100     100     100   \n",
+       "Oligodendrocyte progenitor cell                 100     100     100     100   \n",
+       "Sinusoidal endothelial cell                     100     100     100     100   \n",
+       "Smooth muscle cell                              100     100     100     100   \n",
+       "Ventricle cardiomyocyte                         100     100     100     100   \n",
+       "\n",
+       "                                  Biomaterial  Name  ident  \n",
+       "Celltype                                                    \n",
+       "AT1 cell                                  100   100    100  \n",
+       "AT2 cell                                  100   100    100  \n",
+       "Activated T cell                          100   100    100  \n",
+       "Astrocyte(Bergmann glia)                  100   100    100  \n",
+       "B cell (Plasmocyte)_IGHM/HG high          100   100    100  \n",
+       "Endothelial cell_TMEM100 high             100   100    100  \n",
+       "Excitatory neuron                         100   100    100  \n",
+       "Fibroblast                                100   100    100  \n",
+       "Fibroblast_A2M high                       100   100    100  \n",
+       "M2 Macrophage                             100   100    100  \n",
+       "Macrophage                                200   200    200  \n",
+       "Macrophage_M2                             100   100    100  \n",
+       "Myeloid cell                              100   100    100  \n",
+       "Neutrophil_CD177 high                     100   100    100  \n",
+       "Oligodendrocyte                           100   100    100  \n",
+       "Oligodendrocyte progenitor cell           100   100    100  \n",
+       "Sinusoidal endothelial cell               100   100    100  \n",
+       "Smooth muscle cell                        100   100    100  \n",
+       "Ventricle cardiomyocyte                   100   100    100  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_files.groupby([\"Celltype\"]).count()"
    ]
   },
   {
