fix GTEX links to download data

--- a/run_graph.ipynb
+++ b/run_graph.ipynb
@@ -105,10 +105,10 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('https://storage.googleapis.com/gtex_analysis_v8/rna_seq_data/GTEx_Analysis_2017-06-05_v8_RNASeQCv1.1.9_gene_tpm.gct.gz', skiprows=2, sep='\\t', index_col=0)\n",
+    "df = pd.read_csv('https://storage.googleapis.com/adult-gtex/bulk-gex/v8/rna-seq/GTEx_Analysis_2017-06-05_v8_RNASeQCv1.1.9_gene_reads.gct.gz', skiprows=2, sep='\\t', index_col=0)\n",
     "df.index=[g[:15] for g in df.index]\n",
     "df=df[df.index.isin(pd.read_csv(\"http://stephenslab.github.io/count-clustering/project/utilities/gene_names_all_gtex.txt\", header=None).values.ravel())]\n",
-    "df_files=pd.read_csv(\"https://storage.googleapis.com/gtex_analysis_v8/annotations/GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt\", sep='\\t', index_col=0)\n",
+    "df_files=pd.read_csv(\"https://storage.googleapis.com/adult-gtex/annotations/v8/metadata-files/GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt\", sep='\\t', index_col=0)\n",
     "df_files = df_files[df_files.index.isin(df.columns)]\n",
     "df_files.head()"
    ]
@@ -244,6 +244,15 @@
    "metadata": {},
    "source": [
     "We use scanpy to select $3000$ hvg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc"
    ]
   },
   {
